src/routes/profile/style.scss
@import "../../style/media-query.scss";

// width threshold is based ONLY on the design not devices
$widthThreshold: 800px;
$circle-size: 40px;

.container {
  width: 100%;
  height: 100%;

  .wrapper {
    max-width: 1200px;
    height: 100%;
    display: flex;
    align-self: center;
  }
}

.step .wrapper {
  margin: auto;
  height: auto;
}

.pickSection {
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 76px;

  @media screen and (max-width: 1000px) {
    padding: 40px;
  }
}

.divider {
  background-color: #EBEBEB;
  width: 1px;
}

.characterSection {
  display: flex;
  flex-grow: 1;
  align-items: center;
  justify-content: center;
  padding: 76px;

  @media screen and (max-width: 1000px) {
    padding: 40px;
  }

  > div {
    width: 500px;

    @media screen and (max-width: 1000px) {
      width: auto;
    }
  }
}

.circleItem {
  width: $circle-size;
  height: $circle-size;
  border-radius: 100%;
  border: 0;
  cursor: pointer;
}

.selected {
  filter: drop-shadow(0px 0px 15px rgba(50, 54, 88, .3));
}

.animalIcon {
  background-color: var(--yellow);
  padding: 3px;

  .icon {
    width: 100%;
    height: 100%;
    background-position: center;
    background-size: contain;
  }
}

.largeImgWrapper {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 240px;
}

.largeImg {
  width: 180px;
  height: 180px;
  border-radius: 100%;
  background-color: #FFB145;
  padding: 20px;
  display: flex;
}

.colorPickerWrapper {
  position: relative;

}

.pickerBtn {
  width: $circle-size;
  height: $circle-size;
  border-radius: 100%;
  border: 0;
  cursor: pointer;
  background-color: #EBEBEB;
}

.picker {
  position: absolute;
  bottom: 0;
  left: calc(100% + 10px);
  box-shadow: 0px 4px 10px rgba(0, 0, 0, .15);
  border-radius: 10px;
  padding: 20px;
  background-color: #fff;

  button {
    position: absolute;
    top: 0;
    right: 0;
    border: 0;
    padding: 6px 6px 0 0;
    line-height: initial;

    svg {
      font-size: 20px;
      color: var(--charcoal);
    }
  }

  p {
    margin-top: 0;
    font-size: 14px;
    text-align: left;
  }
}

@media screen and (max-width: #{$widthThreshold}) {

  .wrapper {
    flex-direction: column-reverse;
  }

  .pickSection {
    flex-basis: 100%;
  }

  .divider {
    display: none;
  }

  .characterSection {
    text-align: center;

    > div {
      max-width: unset;
    }

    input,
    label {
      text-align: center;
    }

    button {
      margin: auto;
    }
  }
}

@media screen and (max-width: #{$tablet-portrait-width}) {

  .picker {
    bottom: calc(100% + 10px);
    transform: translateX(-100%);
  }
}

